[package]
name = "activities"
version = "0.1.0"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
colored = "2"
thiserror = "1.0.30"
crossbeam-channel = "*"
parking_lot = "*"

[lib]
name = "tasks"
path = "src/taskslib.rs"
